<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_dot">.</string>
    <string name="number_plus">+</string>
    <string name="number_minus">-</string>
    <string name="number_multiply">*</string>
    <string name="number_divide">/</string>
    <string name="number_equal">=</string>
    <string name="number_clear">C</string>
    <string name="number_backspace">⌫</string>
    <string name="number_parenthesis">( )</string>
    <string name="number_percent">%</string>
    <string name="number_power">^</string>
    <string name="number_log">log</string>
    <string name="hint"> </string>
</resources>
